<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogo"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="@string/hint_password" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="16dp"
        android:background="@color/facebook_blue"
        android:text="@string/button_login"
        android:textColor="@android:color/white" />


    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/text_sign_up" />

</RelativeLayout>
